debug create character with auth + swagger user/auth
